namespace CryptoArbitrage.Engine.DesignPatterns.Structural.Proxy;

/// <summary>
/// RealCryptoService - The real subject that contains actual crypto business logic.
/// This class handles real cryptocurrency operations without any access control,
/// security validation, or caching. These concerns are handled by the proxy.
/// </summary>
public class RealCryptoService : ICryptoService
{
    private readonly string _serviceId;
    private static int _transactionCounter = 0;

    public RealCryptoService(string serviceId)
    {
        _serviceId = serviceId;
        Console.WriteLine($"[RealCryptoService] Initialized with ID: {_serviceId}");
    }

    /// <summary>
    /// Executes a real cryptocurrency transaction.
    /// In a real system, this would communicate with blockchain nodes, APIs, etc.
    /// </summary>
    public string ExecuteTransaction(string fromWallet, string toWallet, decimal amount, string cryptocurrency)
    {
        // Simulate API call delay
        Thread.Sleep(100);

        _transactionCounter++;
        string transactionHash = $"0x{_transactionCounter:D10}_{Guid.NewGuid().ToString().Substring(0, 8)}";

        Console.WriteLine($"[RealCryptoService] Executing transaction:");
        Console.WriteLine($"    From: {fromWallet}");
        Console.WriteLine($"    To: {toWallet}");
        Console.WriteLine($"    Amount: {amount} {cryptocurrency}");
        Console.WriteLine($"    Transaction Hash: {transactionHash}");
        Console.WriteLine($"    Status: ✓ Broadcast to blockchain network");

        return transactionHash;
    }

    /// <summary>
    /// Retrieves wallet balance from blockchain/exchange API.
    /// Simulates fetching real balance data.
    /// </summary>
    public decimal GetWalletBalance(string walletAddress, string cryptocurrency)
    {
        // Simulate API call
        Thread.Sleep(50);

        // Simulate fetching balance (in real scenario, query blockchain/exchange)
        decimal simulatedBalance = new Random().Next(1, 1000) + (decimal)new Random().NextDouble();

        Console.WriteLine($"[RealCryptoService] Fetching balance for wallet: {walletAddress}");
        Console.WriteLine($"    Cryptocurrency: {cryptocurrency}");
        Console.WriteLine($"    Balance: {simulatedBalance:F8} {cryptocurrency}");

        return simulatedBalance;
    }

    /// <summary>
    /// Fetches current cryptocurrency price from market data provider.
    /// </summary>
    public decimal GetCryptoPrice(string cryptocurrency)
    {
        // Simulate API call to price provider
        Thread.Sleep(50);

        // Simulate market prices
        decimal price = cryptocurrency switch
        {
            "BTC" => 45230.50m + (decimal)new Random().NextDouble() * 100,
            "ETH" => 2450.75m + (decimal)new Random().NextDouble() * 50,
            "USDT" => 1.00m,
            _ => 100.00m + (decimal)new Random().NextDouble() * 50
        };

        Console.WriteLine($"[RealCryptoService] Fetching price for: {cryptocurrency}");
        Console.WriteLine($"    Current Price: ${price:F2}");

        return price;
    }
}
